# raytracing-rust

./: .gitignore  Cargo.toml  README.md  ray
src/: camera.rs  main.rs
src/materials/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/shapes/: aabb.rs  bvh.rs  list.rs  mod.rs  plane.rs  sphere.rs  triangle.rs
src/shapes/animated/: sphere.rs
src/textures/: checker.rs  image.rs  mod.rs  noise.rs  solid.rs
src/utils/: args.rs  camera.rs  helpers.rs  hittable.rs  mod.rs  ray.rs  result.rs  vec.rs
src/utils/threads/: bheap.rs  job.rs  message.rs  mod.rs  pool.rs  worker.rs
