[package]
name = "ray-tracing-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
dyn-clonable = "0.9.0"
indicatif = "0.17.5"
num_cpus = "1.15.0"
rand = "0.8.5"

[profile.release]
debug = true
